--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "vue-tsc": "^0.0.24"
   },
   "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
+    "*.{vue,less,md,json}": [
       "prettier --write"
     ],
     "*.ts?(x)": [
