--- a/package.json
+++ b/package.json
@@ -10,27 +10,39 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
     "@types/node": "^15.3.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
-    "husky": "^5.2.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.0.7",
+    "prettier": "^2.2.0",
     "typescript": "^4.1.3",
     "vite": "^2.3.3",
     "vue-router": "^4.0.8",
     "vue-tsc": "^0.0.24"
   },
-  "gitHooks": {
-    "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-    "pre-commit": "lint-staged"
-  },
   "lint-staged": {
-    "*.ts": [ "git add" ],
-    "*.vue": [ "git add" ]
+    "*.{js,vue,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
