--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/node": "^15.3.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
