--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vue/compiler-sfc": "^3.0.5",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^4.3.8",
+    "husky": "4.3.8",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.3",
