--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "4.3.8",
+    "less": "^4.1.1",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.3",
