--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
     "axios": "^0.21.1",
-    "babel-plugin-import": "^1.13.3",
     "commitizen": "^4.2.4",
     "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog": "^3.3.0",
@@ -28,6 +27,7 @@
     "prettier": "^2.2.0",
     "typescript": "^4.1.3",
     "vite": "^2.3.3",
+    "vite-plugin-style-import": "^0.10.0",
     "vue-router": "^4.0.8",
     "vue-tsc": "^0.0.24"
   },
